feat:finish the 1st prototype of the app

--- a/notebooks_exp/ocr_exp1.ipynb
+++ b/notebooks_exp/ocr_exp1.ipynb
@@ -815,7 +815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -829,19 +829,19 @@
           "output_type": "stream",
           "text": [
             "Collecting python-bidi\n",
-            "  Downloading python_bidi-0.6.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.9 kB)\n",
+            "  Downloading python_bidi-0.6.6-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.9 kB)\n",
             "Collecting arabic-reshaper\n",
             "  Downloading arabic_reshaper-3.0.0-py3-none-any.whl.metadata (12 kB)\n",
-            "Downloading python_bidi-0.6.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (292 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m292.9/292.9 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading arabic_reshaper-3.0.0-py3-none-any.whl (20 kB)\n",
+            "Downloading python_bidi-0.6.6-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (291 kB)\n",
+            "Downloading arabic_reshaper-3.0.0-py3-none-any.whl (20 kB)\n",
             "Installing collected packages: python-bidi, arabic-reshaper\n",
-            "Successfully installed arabic-reshaper-3.0.0 python-bidi-0.6.6\n"
+            "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [arabic-reshaper]\n",
+            "\u001b[1A\u001b[2KSuccessfully installed arabic-reshaper-3.0.0 python-bidi-0.6.6\n"
           ]
         }
       ],
       "source": [
-        "# !pip install python-bidi arabic-reshaper"
+        "!pip install python-bidi arabic-reshaper"
       ]
     },
     {
